DATA-1553 Add FM to E006/E044